src/main/java/com/example/demo/global/error/CustomError.java
package com.example.demo.global.error;

public interface CustomError {
    String getMessage();
    int getStatus();
}

